<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Student ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="quiz">Quick Quiz</string>
    <string name="happening">Happenings</string>
    <string name="gallery">Gallery</string>
    <string name="department">Department</string>
    <string name="date">Date</string>
    <string name="announcement">Announcement</string>
    <string name="todo">TODO</string>
    <string name="title_activity_tab_main">TabActivityMain</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dhangadhi_engineering_college">Dhangadhi Engineering College</string>
    <string name="not_me">Not Me?</string>
    <string name="confirm">Register</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="pass">New Password</string>
    <string name="user_name">Student Name</string>
    <string name="student_program">Program</string>
    <string name="continue_sid">Continue</string>
    <string name="email">Email Address</string>
    <string name="registered">Already Registered?</string>

</resources>
