<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content" >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >
    <ImageView
        android:id="@+id/imageViewAnnouncement"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/textViewannouncement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/imageViewAnnouncement"
        android:text="@string/announcement"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewannouncement"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imageViewAnnouncement"
        android:text="@string/date"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/textViewDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDate"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imageViewAnnouncement"
        android:background="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/gallery"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
        android:textStyle="bold" />


</RelativeLayout>
</LinearLayout>
</ScrollView>